feat: Add dark theme

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -1,3 +1,5 @@
+@import 'dark.styl'
+
 /* variables */
 $gt-color-main := #6190e8
 $gt-color-sub := #a1a1a1
@@ -173,7 +175,7 @@ $gt-size-avatar-mobi := em(32px)
     &-login
       margin-right: 0
     &-preview
-      background-color: $gt-color-btn
+      background-color: transparent
       color: $gt-color-main
       &:hover
         background-color: darken($gt-color-btn, 5%)
